Bug 112290 - FILEOPEN DOCX Image in header pushes the text that should be below the image to the right
Summary: FILEOPEN DOCX Image in header pushes the text that should be below the image ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.1.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2017-09-08 11:41 UTC by Gabor Kelemen (Collabora)
Modified: 2020-09-14 07:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The problematic document (52.10 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-09-08 11:41 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document in LO 5.4 and Word 2013 (120.26 KB, image/png)
2017-09-08 11:42 UTC, Gabor Kelemen (Collabora)
Details
Modified example file from Word (51.46 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-08 11:42 UTC, NISZ LibreOffice Team
Details
Screenshot of the modified document in Writer and Word (115.81 KB, image/png)
2019-11-08 11:44 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-09-08 11:41:02 UTC
Created attachment 136118 [details]
The problematic document

This DOCX file was created in Microsoft Word. The document has an image and one line of text in the header area. In Microsoft Word 2013 the text appears below the image, aligned to the center of the page. In LibreOffice the text is in the same line as the image, thus the text is pushed to the right side of the page by the image.

Steps to reproduce:
1. Open the attached DOCX file both in LibreOffice Writer and Microsoft Word.
2. See the result.

Actual results:
The text is pushed to the left side of the page by the image in LibreOffice.

Expected results:
The text should appear below the image like in Microsoft Word.
Comment 1 Gabor Kelemen (Collabora) 2017-09-08 11:42:17 UTC
Created attachment 136119 [details]
Screenshot of the document in LO 5.4 and Word 2013
Comment 2 vihsa 2017-09-08 12:29:03 UTC
repro
lo viewer v1
lo viewer v4
lo viewer v6
lo viewer v8
lo viewer v10

os: android 5.1
device: lyf flame 3 [ ls-4001 ]
Comment 3 Xisco Faulí 2017-09-08 15:01:48 UTC
Confirmed in

- Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

- Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

- LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 4 QA Administrators 2019-11-07 03:34:18 UTC Comment hidden (noise)
Comment 5 NISZ LibreOffice Team 2019-11-08 11:42:55 UTC
Created attachment 155633 [details]
Modified example file from Word
Comment 6 NISZ LibreOffice Team 2019-11-08 11:44:10 UTC
Created attachment 155634 [details]
Screenshot of the modified document in Writer and Word

Modified document shows that the problem is not specific to the header as it happens in the document body if copied over.

Version: 6.4.0.0.alpha1+ (x86)
Build ID: 80109586e6cb6d3e2e0a53a9079c3125ec9b8368
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 7 Commit Notification 2020-08-19 08:11:45 UTC
Attila Bakos committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b03a449161af225302e4b4dd2bb2e69c6d8d170

tdf#112290 sw: fix missing line break in small capital

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2020-09-14 07:51:59 UTC
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded