tdf#112290 Writer editing: Fix Small Capital Line Break

Before longer images what were longer then the line
caused bad breaking in case of small capitals.

Change-Id: Ia0121728bcc099f3ec19e01afd64e1594d6274be